--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS PROFESSIONAL</title>
-    <script src="./reasors_paper_scisors_game.js"></script>
+    <script src="./loops.js"></script>
+
 </head>
 <body>
     <div>
