--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS PROFESSIONAL</title>
-    <script src="./loops.js"></script>
+    <script src="./excel.table.js"></script>
 
 </head>
 <body>
     <div>
-
+        <h2 id="myH2"></h2>
     </div>
 </body>
 </html>
