--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS PROFESSIONAL</title>
-    <script src="./excel.table.js"></script>
+    <style>
+        table, th, td {
+            border: 2px solid black;
+            border-collapse: collapse;
+        }
+        th, td{
+            border-color: blue;
+        }
+    </style>
 
 </head>
 <body>
-    <div>
+    <div id="container">
         <h2 id="myH2"></h2>
     </div>
+    <script src="./excel.table.js"></script>
 </body>
 </html>
