--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <div id="container">
         <h2 id="myH2"></h2>
     </div>
-    <script src="./functions.js"></script>
+    <script src="./simple_calc.js"></script>
 </body>
 </html>
