--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
     <div id="container">
         <h2 id="myH2"></h2>
     </div>
+    <div class="main">
+        <div>
+        <ul >
+        <li>One</li>
+        <li>Two</li>
+       Chapter 10
+       [ 229 ]
+        <li>Three</li>
+        </ul>
+        </div>
+        <div>blue</div>
+        <div>green</div>
+        <div>yellow</div>
+        <div>Purple</div>
+        </div>
     <script src="./bom_dom.js"></script>
 </body>
 </html>
